# blink-alarm

./: Cargo.toml  LICENSE  README.md  configuration_example.json
.github/workflows/: installer.yml  rust.yml
src/: main.rs
wix/: main.wxs
