[package]
name = "blink-alarm"
version = "0.1.0"
edition = "2021"
authors = ["Mateusz Szewc <mateuszszewc@op.pl>"]
description = "Simple program that runs in a loop and sends windows notifications according to specified schedule."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt-notification = "0.5.1"
job_scheduler = "1.2.1"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }